--- a/lib/spa_taskTracker_web/templates/layout/app.html.eex
+++ b/lib/spa_taskTracker_web/templates/layout/app.html.eex
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no, user-scalable=no"/>
-    <title>Task Tracker Wahoo!</title>
-    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Task Tracker </title>
+    <link rel="stylesheet" href="<%= Routes.static_url(@conn, "/css/app.css") %>"/>
   </head>
   <body>
  <div class="container">
